--- a/Assignment1/css/style.css
+++ b/Assignment1/css/style.css
@@ -32,3 +32,14 @@ p {
     margin: 1.5rem 0;
     line-height: 1.5rem
 }
+
+/* footer */
+footer {
+    padding: 2rem 0 2.5rem;
+    background-color: rgba(64, 64, 64, 0.7);
+}
+
+footer>p {
+    font-size: 1.2rem;
+    text-align: center;
+}
