--- a/Assignment1/css/style.css
+++ b/Assignment1/css/style.css
@@ -48,6 +48,26 @@ p {
     font-variation-settings: "wdth" 100;
 }
 
+/* video */
+.video {
+    max-width: 640px;
+    margin: 4.5rem auto 3rem;
+}
+
+.video-wrapper {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 56.25%;
+}
+
+.video-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /* footer */
 footer {
     padding: 2rem 0 2.5rem;
